--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,7 @@
     "ghcr.io/trywilco/anythink-market-docker-images/wilco-agent:latest": {}
   },
   "containerEnv": {
-    "CODESPACE_NAME": "${localEnv:CODESPACE_NAME:-local-devcontainer}",
+    "CODESPACE_NAME": "${localEnv:CODESPACE_NAME}",
     "GITHUB_REPOSITORY": "${localEnv:GITHUB_REPOSITORY}"
   },
   "customizations": {
